clusters/prod/apps/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-infra-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - blog.sudharsana.dev
    secretName: blog-infra-tls
  rules:
  - host: blog.sudharsana.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-infra-service
            port:
              number: 80
